# lbc

./: .flake8  .gitignore  README.md  project-announcement.md  pyproject.toml
lbc/: data.py  experiments.py  fit.py  models.py  peaks.py  util.py
lbc/losses/: mse.py  mse_arctanh.py  mse_grow_mask.py  mse_mask.py
lbc/models/: base.py  base_tanh.py  double_tanh.py
notebooks/: fast-pkg.ipynb  plot_training.ipynb
scripts/: download_58540.sh  download_data.py  preprocess.py  preprocess_20240312.py  scrape_logs.py  submit_train.sh  train.py
scripts/submit/: preprocess.sh
status/2024-01-18/: 2024-01-18 update.md  update.md
