[tool.poetry]
name = "lbc"
version = "0.1.0"
description = ""
authors = ["Connor Hainje <cmhainje@gmail.com>"]
readme = "README.md"
packages = [{ include = "lbc" }]


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
tqdm = "^4.66.1"
jax = {extras = ["cpu"], version = "^0.4.23"}
optax = "^0.1.7"
equinox = "^0.11.2"
astropy = "^6.0.0"
ipywidgets = "^8.1.1"
ipykernel = "^6.28.0"
cloudpickle = "^3.0.0"
requests = "^2.31.0"
scikit-image = "^0.24.0"
wrap-torch2jax = "^0.4.10"
cmz = {git = "https://github.com/cmhainje/cmz.git"}
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"


[virtualenvs]
in-project = true


[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
